--- a/main/pom.xml
+++ b/main/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>site</groupId>
 	<artifactId>main</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>main</name>
 	<description>comunicação principal. onde tem os dados principais do site</description>
 	<url />
