--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,18 +1,30 @@
+# application.properties
+
+global.version=1.1.0
+
+
+# ConfiguraÃ§Ãµes comuns
 spring.application.name=main
 management.endpoints.web.exposure.include=mappings
 
-# Configuração do Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-
-# Configuração para arquivos estáticos
 spring.web.resources.static-locations=classpath:/static/
 spring.web.resources.cache.period=0
 
-# Configuração do servidor
-server.port=8080
-
 spring.web.resources.cache.cachecontrol.no-store=true
 spring.web.resources.cache.cachecontrol.no-cache=true
+
+
+# ConfiguraÃ§Ãµes de Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
