--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # application.properties
 
-global.version=1.1.0
+global.version=1.2.0
 
 
 # Configurações comuns
@@ -27,4 +27,9 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+# erros
+server.error.whitelabel.enabled=false
+server.error.path=/error
+server.error.include-message=always
 
